@@ -23,6 +23,7 @@ This release includes the following changes:
 
 This release includes the following bugfixes:
 
+ o EPSV on multi-homed servers now works correctly
  o chunked-encoded transfers could get closed pre-maturely without error
  o proxy CONNECT now default timeouts after 3600 seconds
  o --disable-epsv and --disable-eprt are ignored when connecting to an IPv6 ftp
@@ -57,6 +58,7 @@ advice from friends like these:
  Peter Wullinger, Guillaume Arluison, Alexander Krasnostavsky, Mohun Biswas,
  Tomas Pospisek, Gisle Vanem, Dan Fandrich, Paul Nolan, Andres Garcia,
  Tim Sneddon, Ian Gulliver, Jean-Philippe Barrette-LaPierre, Jeff Phillips,
- Wojciech Zwiefka, David Phillips, Reinout van Schouwen, Maurice Barnum
+ Wojciech Zwiefka, David Phillips, Reinout van Schouwen, Maurice Barnum,
+ Richard Atterer
 
         Thanks! (and sorry if I forgot to mention someone)
