@@ -6,6 +6,13 @@
 
                                   Changelog
 
+Daniel (6 December 2004)
+- Richard Atterer fixed libcurl's way of dealing with the EPSV
+  response. Previously, libcurl would re-resolve the host name with the new
+  port number and attempt to connect to that, while it should use the IP from
+  the control channel. This bug made it hard to EPSV from an FTP server with
+  multiple IP addresses!
+
 Daniel (3 December 2004)
 - Bug report #1078066: when a chunked transfer was pre-maturely closed exactly
   at a chunk boundary it was not considered an error and thus went unnoticed.
